--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^4.4.0",
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
